syntax = "proto3";
package protoBuf;

// To compile the protobuf to Go run the following inside the protoBuf folder:
// protoc -I=. --go_out=.  computation-msgs.proto

// To compile the protobuf to Python run the following inside the protoBuf folder:
// protoc -I=. --python_out=. computation-msgs.proto

// A generic JSON encoded request
message ComputeRequest {
    string req = 1;
}

// A generic JSON encoded response
message ComputeResponse {
    string response = 1;
    repeated int32 unavailable_sites = 2;
}

message MapRequest {
    int64 id = 1;
    string req = 2;
}

message MapResponse {
    string response = 1;
}

// The results returned by the algorithms in different sites.
message MapResponses {
    repeated MapResponse responses = 1;
    repeated int32 unavailable_sites = 2;
}

// An integer result for a compute response.
message IntResponse {
    int32 val = 1;
}

// A string result for a compute response
message StringResponse {
    string val = 1;
}

